--- a/面试整理/1.基础/CSS/总结.md
+++ b/面试整理/1.基础/CSS/总结.md
@@ -8,7 +8,7 @@
 > 标准盒模型（border-box）：width = content + border + padding </br>
 
 
-- 画一条0.5px的线 (待深入)
+- [画一条0.5px的线](https://segmentfault.com/a/1190000013998884)
 > meta viewport <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" /> </br>
 > border-image </br>
 > transform: scale() </br>
@@ -149,11 +149,11 @@ overflow: hidden
 > 当 overflow 的值不为 visible 时，生成块级格式上下文(BFC)。在计算内部高度的时候，也需要把浮动元素的高度计算在内，所以不会发生高度塌陷。 </br>
 
 ## TODO
-- 复习 CSS 知识点
-- em 与 rem 
-- 移动端适配方案
-- flex 具体详情
-- .5px 方案
 
+- [x] 复习 CSS 知识点
+- [ ] em 与 rem 
+- [ ] 移动端适配方案
+- [x] flex 具体详情
+- [x] .5px 方案
 
 >  </br>
