--- a/面试整理/4.算法与数据结构/leetcode/题目.md
+++ b/面试整理/4.算法与数据结构/leetcode/题目.md
@@ -1,4 +1,5 @@
 ### 题目列表
+改成在 (leetcode官网)[https://leetcode-cn.com/problemset/all/] 做题
 
 1. [魔术索引](https://leetcode-cn.com/problems/magic-index-lcci/)。 在数组A[0...n-1]中，有所谓的魔术索引，满足条件A[i] = i。给定一个 **有序整数数组**，编写一种方法找出魔术索引，若有的话，在数组A中找出一个魔术索引，如果没有，则返回-1。若有多个魔术索引，返回索引值最小的一个。
 
@@ -7,3 +8,8 @@
 输出：0
 说明: 0下标的元素为0
 ```
+
+2. [滑动窗口](https://www.zhihu.com/topic/20746237/intro)滑动窗口算法可以用以解决数组/字符串的子元素问题，它可以将嵌套的循环问题，转换为单循环问题，降低时间复杂度。
+> 给定一个整数数组，计算长度为 'k' 的连续子数组的最大总和。
+
+
