--- a/面试整理/8.浏览器/缓存/浏览器缓存.md
+++ b/面试整理/8.浏览器/缓存/浏览器缓存.md
@@ -19,3 +19,28 @@
 
 
 [从输入 URL 到展现涉及哪些缓存环节(非常详细)](https://mp.weixin.qq.com/s/tuQ66vnipDcg_rYABfP2kA)
+
+- 总结
+1. 缓存三种策略：存储策略、过期策略、协商策略
+2. 缓存 HTTP Header 关键字：
+   1. expires, cache-control, pragma
+   2. last-modified, if-modified-since, if-unmodified-since; 
+   3. etag, if-none-match, if-match
+  
+3. 与存储策略相关：
+   1. cache-control: no-store, no-cache, public, private, max-age
+   2. expires
+  
+4. 与过期策略有关的: 
+   1. cache-control: max-age, no-cache
+   2. expires
+   3. 若不明确指定以上两者，则采用 启发式缓存。Date.value - last-modified.value * 10% 作为过期时间
+
+5. 与协商策略有关的:(缓存过期、或F5刷新页面？)
+   1. last-modified, if-modified-since
+   2. etag, if-none-match
+
+6. 最佳实践
+   1. 经常会变动的资源（例如 index.html）不采用缓存: cache-control: no-cache; 每次都进行协商缓存
+   2. 网页内的静态资源设置很长的过期时间，资源通过指纹签名命名。每次修改资源之后资源 URL 都会发生变化，以此刷新缓存。
+
