--- a/面试整理/3.工具/Webpack/总结.md
+++ b/面试整理/3.工具/Webpack/总结.md
@@ -1,2 +1,6 @@
-### CSS 总结
+### 文章
+1. [奇舞周刊 Webpack4 那点儿东西](https://mp.weixin.qq.com/s/Q_u7I5FHEHA0vvH2yR6FIg)
 
+2. [奇舞周刊 带你走进webpack世界，成为webpack头号玩家](https://mp.weixin.qq.com/s/bkV8XscUWjxUWjXeVk-8Ng)
+
+3. [奇舞周刊 Webpack 插件开发如此简单！](https://mp.weixin.qq.com/s/nimOuftziXCWHV61FfjWog)
