--- a/面试整理/4.算法与数据结构/总结.md
+++ b/面试整理/4.算法与数据结构/总结.md
@@ -1,4 +1,6 @@
 ### 算法与数据结构
 
+[互联网公司最常见的面试算法题有哪些？ - 力扣（LeetCode）的回答 - 知乎](https://www.zhihu.com/question/24964987/answer/586425979)
+
 - 排序算法
 > 冒泡 | 插入 | 选择 | 快速排序  </br>
