隐式类型转换

--- a/面试整理/1.基础/JS/15.隐式类型转换.md
+++ b/面试整理/1.基础/JS/15.隐式类型转换.md
@@ -15,6 +15,8 @@
 - 相等 == 比较中存在对象时的处理情况
 
   1. Symbole.toPrimitive 
+      1. 如果对象部署了这个接口，调用此接口
+      2. 如果此接口未返回原始数据类型，报错！
 
   2. 对象都存在 valueOf / toString 的原型方法
       1. valueOf  返回自身
