--- a/面试整理/2.框架/Vue/2.eventBus/1.eventBus.md
+++ b/面试整理/2.框架/Vue/2.eventBus/1.eventBus.md
@@ -1,7 +1,11 @@
 ### Vue - EventBus
 
 1. const EventBus = new Vue() 为何会创建一个事件中心 ？
+  1. new Vue() 会 initEvents(vm) 初始化 vue 实例
+  2. 此实例中维护了一个事件中心，实现了观察者模式
 
 2. EventBus.$on 做了什么事？
+  1. 注册事件，并缓存回调函数
 
 3. EventBus.$emit 做了什么事？
+  2. 执行对应事件的回调函数
