--- a/面试整理/11.面经/3.跟谁学.md
+++ b/面试整理/11.面经/3.跟谁学.md
@@ -12,9 +12,10 @@
    4. 解构赋值
    5. iterator（承接解构赋值谈）
    6. Vue.use 做了什么事情
-   7. $router 与 $route 的区别
-   8. Vue-Router 传参方式
-   9. 对加班怎么看
+   7. Computed 与 watch 的区别
+   8. $router 与 $route 的区别
+   9. Vue-Router 传参方式
+  10. 对加班怎么看
    
 4. 二面（leader面 1h）
    1. 谈谈项目
