--- a/面试整理/5.面经/3.跟谁学.md
+++ b/面试整理/5.面经/3.跟谁学.md
@@ -36,3 +36,12 @@
    1. 新型公司，规模在持续增长。
    2. 业务繁忙，加班加点
    3. 待 HR 回复信息
+
+6. 结果
+   1. 失败
+
+7. 反思
+   1. 要价工资过高，对方可能感觉我对自己的没有清晰的定位（1）
+   2. 过往经历一般，没有亮点公司与项目，而且跳槽次数较多（2）
+   3. 项目经验一般，对方更需要基础好 + 项目经验好（高级工程师）（3）
+   4. 没有在对方给出口头offer的时候给出明确的回复，可能会觉得我态度一般（4）
