--- a/面试整理/5.面经/4.某讯云市场.md
+++ b/面试整理/5.面经/4.某讯云市场.md
@@ -1,11 +1,11 @@
 1. 面试形式
-   1. 视频面（30min解决一道题）
+   1. 视频面
 
 2. 面试内容
-   1. 初面
-   2. 
+   1. 一面（做题）
+   2. 二面（技术）
 
-3. 初面
+3. 初面（30min解决一道题）
    1. 题目，对一个数组进行扁平化、去重、排序
 ```js
 /** 
@@ -19,11 +19,20 @@
   */
 ```
       
+4. 二面
+   1. 自我介绍...
+   2. 为什么做前端
+   3. 前端性能优化 与 首屏渲染
+   4. Vue 生命周期及其所做事情
+   5. HTTP 2.0 
+   6. HTTPS
+   7. 前端安全
+   8. 有什么问题问他
 
-3. 整体感觉
-   1. 
-   2. 
+5. 整体感觉
+   1. 一面，出图算耳目一新，多想一下并不难解决
+   2. 二面，面试官爽快，能探出我的深浅
    
-4. 评价
+6. 评价
    1. 
    2. 
