--- a/面试整理/5.面经/5.某节.md
+++ b/面试整理/5.面经/5.某节.md
@@ -29,16 +29,21 @@ let foo = flow([add,squre])
 foo(1,2) // => (1+2) * (1+2) => 9
 ```
    
-4. 二面
+4. 二面（60min）
+   1. 你做了哪些小程序的性能优化
+   2. 如果让你设计性能优化，你会怎么做
+   3. 小程序如何实现类似 web 端的 createElement 方法
+   4. 有没有了解过小程序 js 内核和 web 端的不同
+   5. 小程序技术选型你怎么去考虑
+   6. web 项目的项目结构的最佳实践
+   7. typescript 为你带来了哪些好处
+   8. 你的项目中怎么做权限控制的
+   9. 做题...
    
 
 4. 整体感觉
    1. 一面面试官人 nice，会引导我回答问题，与我相互之间的互动较多。
-   2. 二面面试官人稍显严肃，但后面交流之后感觉挺好，坦诚直率。
-   3. 两位面试官的确是技术出身，也懂得在适当的时机给予适当的帮助以激发面试者的全部潜力
-   4. 面试过程较为愉快
+   2. 二面看中业务能力，问题围绕业务展开。
    
 5. 评价
-   1. 新型公司，规模在持续增长。
-   2. 业务繁忙，加班加点
-   3. 待 HR 回复信息
+   1. 二面面完，自觉已挂...
